--- a/index.html
+++ b/index.html
@@ -13,24 +13,111 @@
 
 <body>
   <h1>Gentle Jack B</h1>
-  <p>Nothing to see here...</p>
-  <div class="list">
-    <h2>Thank God all the way</h2>
-    <h2>Thank God all the way</h2>
+  <div id="stepOne">
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
+    </div>
   </div>
-  <div class="box">
-    <div class="micBox">
-      <p class="mic">m</p>
+  </div>
+  <div id="stepTwo">
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
     </div>
-    <div class="pic">
-      <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
-    </div>
-    <div class="nameBox">
-      <p class=""> Mr ABC </p>
-      <p class="option">:</p>
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
     </div>
   </div>
-  <input type="button" name="" id="button" value="Login" />
+  <div id="stepThree">
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
+    </div>
+  </div>
+  <div id="stepFour">
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
+    </div>
+    <div class="box">
+      <div class="micBox">
+        <p class="mic">m</p>
+      </div>
+      <div class="pic">
+        <img src="D929505F-FB2D-4765-9696-970B0329D55A.jpeg" alt="" />
+      </div>
+      <div class="nameBox">
+        <p class=""> Mr ABC </p>
+        <p class="option">:</p>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <div class="footBox">
       <p class="call">m</p>
