--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1>Gentle Jack B</h1>
+  <h1 class="myName">Gentle Jack B</h1>
   <div id="stepOne">
     <div class="box">
       <div class="micBox">
